--- a/lernejo-tester/pom.xml
+++ b/lernejo-tester/pom.xml
@@ -14,6 +14,7 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <kotlin.version>1.4.32-release-380</kotlin.version>
     </properties>
 
 </project>
